<resources>
  <string name="app_name">FanitoAndroidClient</string>

  <!-- play store -->
  <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
  <string name="app_market_link">"market://details?id="</string>
  <string name="fanito_website" translatable="false">https://www.fanito.io</string>

  <!-- navigation labels -->
  <string name="home_label" translatable="false">الرئيسية</string>
  <string name="hunt_label" translatable="false">صيد</string>
  <string name="wallet_label" translatable="false">محفظة</string>
  <string name="feed_label" translatable="false">تغذية</string>
  <string name="exchange_label" translatable="false">تبادل</string>
  <string name="survey_label" translatable="false">استبيان</string>
  <string name="voting_label" translatable="false">تصويت</string>
  <string name="token_info_label" translatable="false">معلومات الرمز</string>

  <string name="empty" />
  <string name="agreement">أوافق على جميع <font color='#FCA234'>القوانين والأنظمة</font></string>
  <string name="network_error">عدم الاتصال بالإنترنت</string>
  <string name="please_wait">يرجى الانتظار</string>
  <string name="phone_not_registered">لم يتم تسجيل رقم الجوال</string>
  <string name="operation_failed">فشلت العملية</string>
  <string name="operation_limit_exceeded">تجاوز الحد الأقصى للعمليات</string>
  <string name="invalid_otp">رمز التحقق غير صالح</string>
  <string name="enter_your_phone_number">يرجى إدخال رقم جوالك</string>
  <string name="enter_your_verify_code">يرجى إدخال رمز التحقق المكوّن من 4 أرقام الذي أرسلناه إلى رقمك</string>
  <string name="phone">الجوال</string>
  <string name="next">التالي</string>
  <string name="login">تسجيل الدخول</string>
  <string name="register">التسجيل</string>
  <string name="edit_number">تعديل الرقم</string>
  <string name="resend_code">إعادة إرسال الرمز</string>
  <string name="token">الرمز</string>
  <string name="vote">التصويت</string>
  <string name="edit_information">تعديل المعلومات</string>
  <string name="user_information">معلومات المستخدم</string>
  <string name="settings">الإعدادات</string>
  <string name="security">الأمان</string>
  <string name="verify_identity">تحقق من الهوية</string>
  <string name="terms_and_condition">شروط استخدام الخدمة</string>
  <string name="contact_us">اتصل بنا</string>
  <string name="survey">استطلاع</string>
  <string name="surveys">استطلاعات</string>
  <string name="my_wallet_balance">رصيد محفظتي</string>
  <string name="tooman">تومان</string>
  <string name="rial">ريال</string>
  <string name="my_token">رمزي</string>
  <string name="my_tokens">رموزي</string>
  <string name="withdraw">سحب</string>
  <string name="deposit">إيداع</string>
  <string name="buy_token">شراء رمز</string>
  <string name="wallet_history">سجل محفظتي</string>
  <string name="sign_out">تسجيل الخروج من الحساب</string>
  <string name="fan_clubs">الأندية المشجعة</string>
  <string name="game_and_reward">اللعبة والجائزة</string>
  <string name="market">السوق</string>
  <string name="tokens_empty">لا توجد أرقام لعرضها</string>
  <string name="try_again">حاول مرة أخرى</string>

  <string name="participants">المشاركون</string>
  <string name="active">نشط</string>
  <string name="ended">انتهت</string>
  <string name="polls_pending">في انتظار البدء</string>
  <string name="get_poll_options_failed">فشل في الحصول على خيارات الاستطلاع</string>
  <string name="poll_options_empty">لا توجد خيارات استطلاع</string>
  <string name="send">إرسال</string>
  <string name="required_token_not_found">الرمز المطلوب غير موجود للمشاركة في هذا الاستطلاع</string>
  <string name="already_voted">لقد شاركت بالفعل في الاستطلاع</string>
  <string name="version">النسخة</string>
  <string name="news">أخبار</string>
  <string name="fan_token">رمز المعجبين</string>
  <string name="game">لعبة</string>
  <string name="reward">مكافأة</string>
  <string name="balance_is_not_enough">رصيد هذا النادي غير كافي</string>
  <string name="perpolisNews1">
    بعد إجراء عملية الطرح العام على البورصة الثانوية، ستبدأ المفاوضات لنقل جزء من أسهم برسبوليس واستقلال إلى مشغلين منافسين وهما إيرانسل وهمراه اول.
    وقال حسين قربان زاده: تعتزم هذه الهيئة في المرحلة الأولى من الخصخصة طرح جزء من أسهم هاتين الناديين في سوق الأسهم المنفصلة وعلى لوحة التداول البرتقالية.
    وأضاف: من خلال طرح أسهم هاتين الناديين في البورصة الثانوية، سيكون لديهما الالتزام بتقديم معلومات مالية أكثر دقة وستكون هذه المعلومات متاحة للجمهور، مما يزيد من شفافية ماليتهما.
    وفقًا له، فإن ميزة هذا النوع من زيادة رأس المال هي أن الموارد التي تحصل عليها من زيادة رأس المال في الشركات ستكون مخزنة وستخصص لأنشطة هذين الناديين الرياضيين، وسيكون بإمكان الناس أيضًا المشاركة في زيادة رأس المال في هذه الشركات.
</string>
  <string name="perpolisNews2">
    مشيري، الذي يمتلك ثروة بقيمة 2.5 مليار دولار، هو واحد من ألف شخص ثري في العالم وقد حصل على رأس المال الرئيسي من خلال استثمارات في قطاعات الصناعة والتعدين، وقطاع الاتصالات والأندية الرياضية.
    تم تداول مشيري لشراء أسهم نادي برسبوليس بعد أن أعلن وزير الرياضة في واحدة من تلك الوعود التي لا تنتهي أن هذه الخطوة ستتم قبل نهاية العام.
    مشيري لديه علاقة طويلة مع علي دايي. ويُقال أنه كان لديه اتصالات مع المدير التنفيذي الحالي لنادي برسبوليس، الذي يُعرف باسم درويش.
</string>
  <string name="perpolisNews3">
    مشيري لديه علاقة طويلة مع علي دايي. ويُقال أنه كان لديه اتصالات مع المدير التنفيذي الحالي لنادي برسبوليس، الذي يُعرف باسم درويش.
    تم تداول مشيري لشراء أسهم نادي برسبوليس بعد أن أعلن وزير الرياضة في واحدة من تلك الوعود التي لا تنتهي أن هذه الخطوة ستتم قبل نهاية العام.
    مشيري لديه علاقة طويلة مع علي دايي. ويُقال أنه كان لديه اتصالات مع المدير التنفيذي الحالي لنادي برسبوليس، الذي يُعرف باسم درويش.
    العاليشاه، الذي كان في حالة جيدة في النصف الأول من الموسم وكان له تأثير في الأداء في المباريات، أصيب في مشهد بسيط في عضلة فخذه خلال مباراة مع سيباهان في أراك، مما أدى إلى فقدانه لأربع مباريات حاسمة ضد تراكتور، بديهة، فجر وفولاد. وقبل مباراة السوبر كأس في سيرجان، عاد العاليشاه إلى التدريبات الجماعية، لكنه لم يكن في حالة جيدة للمباراة. ومع ذلك، بينما كانت الظروف المعقدة لتلك المباراة والإصابة المفاجئة لمهدي ترابي وإحسان پهلوان قبل يومين من المباراة، أجبر الجهاز الفني على استخدام العاليشاه بالقوة.
    العاليشاه، الذي كان في حالة جيدة في النصف الأول من الموسم وكان له تأثير في الأداء في المباريات، أصيب في مشهد بسيط في عضلة فخذه خلال مباراة مع سيباهان في أراك، مما أدى إلى فقدانه لأربع مباريات حاسمة ضد تراكتور، بديهة، فجر وفولاد. وقبل مباراة السوبر كأس في سيرجان، عاد العاليشاه إلى التدريبات الجماعية، لكنه لم يكن في حالة جيدة للمباراة. ومع ذلك، بينما كانت الظروف المعقدة لتلك المباراة والإصابة المفاجئة لمهدي ترابي وإحسان پهلوان قبل يومين من المباراة، أجبر الجهاز الفني على استخدام العاليشاه بالقوة.
</string>
  <string name="esteglalNews2">
    قام قائد فريق كرة القدم في استقلال بمغادرة الملعب في نهاية تدريب اليوم بسبب الإصابة، حيث سيقوم فرهاد مجيدي بتقديمه إلى لجنة الانضباط في النادي.
تم تنظيم تدريب استقلال اليوم (الثلاثاء) في المركز الرياضي آرارات من الساعة 13. وفي نهاية هذا التدريب، شعر فياض غفوري بألم في إصبع قدمه وغادر الملعب بسبب الإصابة. وبعد هذا الحادث، طلب قائد الفريق عندما لم يكن يشعر براحة أن يحصل على ثلج.
أعلن فرهاد مجيدي المدير الفني لفريق استقلال أن فياض غفوري غادر التدريب دون إذن، وأبلغ بيجان طاهري الذي يرأس الفريق مؤقتاً بأن هذا اللاعب سيكون تحت إشراف لجنة الانضباط ولن يُسمح له بالمشاركة في التدريبات.
</string>
  <string name="esteglalNews3">
    أعلن فرهاد مجيدي المدير الفني لفريق استقلال أن فياض غفوري غادر التدريب دون إذن، وأبلغ بيجان طاهري الذي يرأس الفريق مؤقتاً بأن هذا اللاعب سيكون تحت إشراف لجنة الانضباط ولن يُسمح له بالمشاركة في التدريبات.
عندما يبقى يوم واحد فقط على هذه المباراة المهمة، لا يزال مجيدي لا يعرف تمامًا ما إذا كان بإمكانه استخدام سياوش يزداني ومحمد حسين مرادمند، اللذين هما على وشك الالتحاق بالخدمة العسكرية، أم لا. باستثناء ذلك، لا يزال من غير الواضح مصير فياض غفوري قائد الفريق، والذي قد يكون جزءًا من الغائبين عن هذا الفريق في مباراة الفجر.
</string>



</resources>