<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="AlwaysShowAction">

  <item
    android:id="@+id/home"
    android:icon="@drawable/ic_home"
    android:orderInCategory="5"
    android:title="@string/home_label"
    app:showAsAction="always" />

  <item
    android:id="@+id/hunt"
    android:icon="@drawable/ic_hunt"
    android:orderInCategory="4"
    android:title="@string/hunt_label"
    app:showAsAction="always" />

  <item
    android:id="@+id/wallet"
    android:icon="@drawable/ic_wallet"
    android:orderInCategory="3"
    android:title="@string/wallet_label"
    app:showAsAction="always" />

  <item
    android:id="@+id/exchange"
    android:icon="@drawable/ic_exchange"
    android:orderInCategory="2"
    android:title="@string/exchange_label"
    app:showAsAction="always" />

  <item
    android:id="@+id/surveys"
    android:icon="@drawable/ic_survey"
    android:orderInCategory="1"
    android:title="@string/survey_label"
    app:showAsAction="always" />

</menu>